@@ -1,3 +1,5 @@
+HEAD
+	+ Now groups can be provisioned for OpenChange
 4.1.1
 	+ Bump version due to wrongly released package with no changes
 4.1
